# testing

./: Dockerfile  README.md  build_clio_base_image.sh
boost/: Makefile.in  configure  configure.ac
boost/autom4te.cache/: output.1  requests  traces.0  traces.1  traces.2  traces.3
boost/build-aux/: config.h.in~
boost/src/: Makefile.am  Makefile.in  example.cpp
boost/src/asio/: Makefile.am  Makefile.in  async_server.cpp  http_client.cpp  sync_client.cpp  sync_server.cpp  timer1.cpp  timer2.cpp  timer3.cpp
boost/src/bind/: Makefile.am  Makefile.in  bind.cpp
boost/src/log/: Makefile.am  Makefile.in  trivial.cpp  trivial_file.cpp  trivial_filter.cpp
boost/src/program_options/: Makefile.am  Makefile.in  simplepo.cpp
ephemeral/design/linqc/: .gitignore  clwrap
ephemeral/design/mpmount/: .gitignore  Makefile  READ_ME  main.c  mntlist.c  mntlist.h
ephemeral/design/ouroboros/: .gitignore  Makefile  ReadMe.txt  events.c  events.h  main.c  options.c  options.h  ringbuf.c  ringbuf.h  threads.c  threads.h  version.h
ephemeral/docs/CONR/: .gitignore  CONRPrimer.html
ephemeral/docs/MTU_0914/: Sept14MTU.html
ephemeral/docs/MTU_SG/: MTUStyleGuide.html
ephemeral/docs/Memory/: UnderstandingMemory.html
ephemeral/docs/PhoneScreen/: Questions.html
ephemeral/docs/TickerFE/: .gitignore  TickerFEPrimer.html
ephemeral/docs/aix/: .gitignore  aix_shared_memory.html  push_to_proj
ephemeral/standards/: PythonRFC.html  README  ResourceControls.html  ScriptingStandards.html
ephemeral/standards/examples/: awk_1  cat_1  cat_2  complex_typeset  cprintf_1  date_1  definexamp  forkinread_1  getdata  grep.sh  lorem_ipsum  mlarray_1  nohelp_1  nulltest  returnscript  returnval  spinner_1  spinner_2  unset_1
ephemeral/tools/: .gitignore
ephemeral/tools/aixpmp/: pmp
ephemeral/tools/bbhelpq/: .gitignore  HowTo.txt  Makefile  bbhelp  compile.c  compile.h  decompile.c  decompile.h  endian.c  endian.h  filefmt.c  filefmt.h  main.c  options.c  options.h  query.c  query.h  slurp.c  slurp.h  ssearch.c  ssearch.h  version.h
ephemeral/tools/blog/: .gitignore  Makefile  blog.1  cfileops.c  cfileops.h  cheader.c  cheader.h  clogfile.grammar  datahandler.c  datahandler.h  endian.c  endian.h  filefinder.c  filefinder.h  fileops.c  fileops.h  knowndata.c  main.c  options.c  options.h  rfileops.c  rfileops.h  rmetadata.c  rmetadata.h  tdsetup.sh  version.h
ephemeral/tools/cpub/: .gitignore  buildit  mansrc.sh
ephemeral/tools/killit/: .gitignore  Makefile  bbenv.c  bbenv.h  main.c  options.c  options.h  pshelp.c  pshelp.h  pwhelp.c  pwhelp.h  version.h
ephemeral/tools/linpmp/: cpu_info  cpu_speed  netfunc.sh  pmp  sys_type
ephemeral/tools/lperfpkg/: buildit  cleanit
ephemeral/tools/shmstat/: .gitignore  Makefile  distrogph.c  distrogph.h  main.c  options.c  options.h  version.h
ephemeral/tools/skewatch/: .gitignore  Makefile  Results.txt  main.c
ephemeral/tools/solpmp/: .gitignore  pmp
ephemeral/tools/sysdiff/: .gitignore  ReadMeFirst  sysdbg  sysdiff
ephemeral/tools/sysstatd/: .gitignore  Makefile  acclog.c  acclog.h  apuesrc.h  bbenv.c  (+40 more)
flowdoc/: simple_demo_src.html
flowdoc/aux_files/: cFmain.cmapx
log_analysis/: README.md  color_print.awk  format_util.awk  log_stat.awk  md_formatter.awk  result.md  test.awk  txt_formatter.awk
practice/: Makefile.am  Makefile.in  configure  configure.ac
practice/1010/: Makefile.am  main.cpp
practice/autom4te.cache/: output.0  output.1  requests  traces.0  traces.2
practice/benchmark/: Makefile.am
practice/benchmark/hello/: Makefile.am  main.cpp
practice/build-aux/: config.h.in
practice/codecon/: Makefile.am
practice/codecon/base_arithmetic/: base_arithmetic.cpp  base_arithmetic.h  main.cpp
practice/codecon/expecto_palindronum/: LPS_Manacher.md  Makefile.am  README.md  main.cpp  palindrome.cpp  palindrome.h  test.cpp
practice/codecon/hero/: main.cpp
practice/codecon/mug_color/: Makefile.am  README.md  main.cpp  mug_color.cpp  mug_color.h  test.cpp
practice/codecon/wrap/: README.md  main.cpp
practice/coin/: Makefile.am  README.md  coin.cpp
practice/exception/: Makefile.am  README.md  foo.h  main.cpp  my_exception.cpp  my_exception.h
practice/gtest/: Makefile.am  shared_resource.h  test_env.cpp
practice/hackerrank/: Makefile.am
practice/hackerrank/big_int/: Makefile.am  README.md  big_int.h  big_int.py  test.cpp
practice/hackerrank/chocolate_game/: README.md  case2.txt  test.cpp
practice/hackerrank/even_tree/: test.cpp  tree.h
practice/hackerrank/heap_sort/: Makefile.am  big_int.cpp  heap_sort.cpp  heap_sort.h  out  test.cpp
practice/hackerrank/left_rotation/: Makefile.am  README.md  test.cpp
practice/memcheck/: Makefile-flow  Makefile.am  Makefile.in  fun.cpp  main.cpp
practice/mixed/: Makefile.am  README.md  foo.c  foo.h  main.cpp
practice/repunit/: challenge.md
practice/repunit/src/: Makefile.am  main.cpp  repunit.cpp  repunit.h  util.cpp  util.h
practice/repunit/test/: Makefile.am  test_rep.cpp  test_util.cpp
practice/smalltest/: Makefile.am  autoptr.h  mock11.cpp  mock_foo.h  my_memcpy.cpp  stack_q.h  test_autoptr.cpp  test_delegate_ctor.cpp  test_expect_not_call.cpp  test_inherit.cpp  test_stack_q.cpp  test_template.cpp  vec_init.cpp
practice/smalltest/.deps/: mock11.Po  test_delegate_ctor.Po  test_expect_not_call.Po  test_inherit.Po
practice/smalltest/thread/: Makefile.am  hello.cpp  test_thread.cpp
practice/vector/: Makefile.am  Makefile.in  test_remove.cpp
protobuf/: Makefile.in  configure  configure.ac
protobuf/autom4te.cache/: output.0  output.2  output.4  requests  traces.1  traces.2  traces.3  traces.4  traces.5
protobuf/proto/: clio_api.pb.cc  clio_api.pb.h  clio_api.proto  clio_command.pb.cc  clio_command.pb.h  clio_command.proto  server.pb.cc  server.pb.h  server.proto  server_pb2.py
protobuf/src/: Makefile.am  Makefile.in  clio_api.cpp  example.cpp  file_access.cpp
shard/: CMakeLists.txt  README.md  config.h.in
shard/src/: CMakeLists.txt  shard.h  shard_jch.cpp  shard_jch.h  shard_mod.cpp  shard_mod.h
shard/test/: CMakeLists.txt  gtest_shard.cpp
(+307 files in other folders)
